kitten/reported_bugs/rust/rust-78005/stderr.txt
error[E0109]: type arguments are not allowed for this type

 --> mutant.rs:2:17

  |

2 | let x : isize < isize > ;

  |                 ^^^^^ type argument not allowed



error[E0109]: type arguments are not allowed for this type

 --> mutant.rs:3:14

  |

3 | let x : i8 < isize > ;

  |              ^^^^^ type argument not allowed



error[E0109]: type arguments are not allowed for this type

 --> mutant.rs:4:15

  |

4 | let x : i16 < isize > ;

  |               ^^^^^ type argument not allowed



error[E0109]: type arguments are not allowed for this type

 --> mutant.rs:5:15

  |

5 | let x : i32 < isize > ;

  |               ^^^^^ type argument not allowed



error[E0109]: type arguments are not allowed for this type

 --> mutant.rs:6:15

  |

6 | let x : i64 < isize > ;

  |               ^^^^^ type argument not allowed



error[E0109]: const arguments are not allowed for this type

 --> mutant.rs:7:17

  |

7 | let x : usize < main > ;

  |                 ^^^^ const argument not allowed



error[E0109]: type arguments are not allowed for this type

 --> mutant.rs:8:14

  |

8 | let x : u8 < isize > ;

  |              ^^^^^ type argument not allowed



error[E0109]: type arguments are not allowed for this type

 --> mutant.rs:9:15

  |

9 | let x : u16 < isize > ;

  |               ^^^^^ type argument not allowed



error[E0109]: type arguments are not allowed for this type

  --> mutant.rs:10:15

   |

10 | let x : u32 < isize > ;

   |               ^^^^^ type argument not allowed



error[E0109]: type arguments are not allowed for this type

  --> mutant.rs:11:15

   |

11 | let x : u64 < isize > ;

   |               ^^^^^ type argument not allowed



error[E0109]: type arguments are not allowed for this type

  --> mutant.rs:12:16

   |

12 | let x : char < isize > ;

   |                ^^^^^ type argument not allowed



error[E0109]: lifetime arguments are not allowed for this type

  --> mutant.rs:13:17

   |

13 | let x : isize < 'static > ;

   |                 ^^^^^^^ lifetime argument not allowed



error[E0109]: lifetime arguments are not allowed for this type

  --> mutant.rs:14:14

   |

14 | let x : i8 < 'static > ;

   |              ^^^^^^^ lifetime argument not allowed



error[E0109]: lifetime arguments are not allowed for this type

  --> mutant.rs:15:15

   |

15 | let x : i16 < 'static > ;

   |               ^^^^^^^ lifetime argument not allowed



error[E0109]: lifetime arguments are not allowed for this type

  --> mutant.rs:16:15

   |

16 | let x : i32 < 'static > ;

   |               ^^^^^^^ lifetime argument not allowed



error[E0109]: lifetime arguments are not allowed for this type

  --> mutant.rs:17:15

   |

17 | let x : i64 < 'static > ;

   |               ^^^^^^^ lifetime argument not allowed



error[E0109]: lifetime arguments are not allowed for this type

  --> mutant.rs:18:17

   |

18 | let x : usize < 'static > ;

   |                 ^^^^^^^ lifetime argument not allowed



error[E0109]: lifetime arguments are not allowed for this type

  --> mutant.rs:19:14

   |

19 | let x : u8 < 'static > ;

   |              ^^^^^^^ lifetime argument not allowed



error[E0109]: lifetime arguments are not allowed for this type

  --> mutant.rs:20:15

   |

20 | let x : u16 < 'static > ;

   |               ^^^^^^^ lifetime argument not allowed



error[E0109]: lifetime arguments are not allowed for this type

  --> mutant.rs:21:15

   |

21 | let x : u32 < 'static > ;

   |               ^^^^^^^ lifetime argument not allowed



error[E0109]: lifetime arguments are not allowed for this type

  --> mutant.rs:22:15

   |

22 | let x : u64 < 'static > ;

   |               ^^^^^^^ lifetime argument not allowed



error[E0109]: lifetime arguments are not allowed for this type

  --> mutant.rs:23:16

   |

23 | let x : char < 'static > ;

   |                ^^^^^^^ lifetime argument not allowed



error: internal compiler error: compiler/rustc_typeck/src/collect/type_of.rs:115:26: unexpected anon const res PrimTy(Uint(Usize)) in path: Path { span: mutant.rs:7:9: 7:23 (#0), res: PrimTy(Uint(Usize)), segments: [PathSegment { ident: usize#0, hir_id: Some(HirId { owner: DefId(0:3 ~ mutant[8787]::main), local_id: 57 }), res: Some(Err), args: Some(GenericArgs { args: [Const(ConstArg { value: AnonConst { hir_id: HirId { owner: DefId(0:3 ~ mutant[8787]::main), local_id: 54 }, body: BodyId { hir_id: HirId { owner: DefId(0:3 ~ mutant[8787]::main), local_id: 56 } } }, span: mutant.rs:7:17: 7:21 (#0) })], bindings: [], parenthesized: false }), infer_args: false }] }



thread 'rustc' panicked at 'Box<Any>', /rustc/e160e5cb80652bc2afe74cb3affbe35b74243ea9/compiler/rustc_errors/src/lib.rs:891:9

note: run with `RUST_BACKTRACE=1` environment variable to display a backtrace



note: the compiler unexpectedly panicked. this is a bug.



note: we would appreciate a bug report: https://github.com/rust-lang/rust/issues/new?labels=C-bug%2C+I-ICE%2C+T-compiler&template=ice.md



note: rustc 1.49.0-nightly (e160e5cb8 2020-10-14) running on x86_64-unknown-linux-gnu



note: compiler flags: -C debuginfo=2 -C opt-level=s -C target-cpu=skylake --crate-type staticlib



error: aborting due to 23 previous errors



For more information about this error, try `rustc --explain E0109`.

